remove unnecessary sub files, lines
