# models/user.js
@@ -15,11 +15,6 @@ const userSchema = new Schema({
     type: String,
     required: [true, "Password is required"],
   },
-  subscription: {
-    type: String,
-    enum: ["starter", "pro", "business"],
-    default: "starter",
-  },
   token: {
     type: String,
     default: null,
